--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -1,15 +1,15 @@
 {
-    "quran":"القران الكريم",
-    "Sala":"مواعيد الصلاه ",
-    "Qbla":"القبله",
-    "Sebha":"السبحه",
-    "splach":"اسلامي",
-    "lastRead":"اخر قراءه",
-    "SURAHNO":"رقم الصوره ",
-    "alert":"برجاء التاكد من اتصالك بالانترنت و المحاوله مره اخري ",
-    "alertCeck":"اوافق ",
-    "Date":"التاريخ  ",
-    "CLICK":"اضغط ",
-
-
+    "helloWorld": "اخر قراءه",
+    "quran": "القران الكريم",
+    "sala": "مواعيد الصلاه ",
+    "qbla": "القبله",
+    "sebha": "السبحه",
+    "splach": "اسلامي",
+    "lastRead": "اخر قراءه",
+    "surahno": "رقم الصوره ",
+    "alert": "برجاء التاكد من اتصالك بالانترنت و المحاوله مره اخري ",
+    "alertceck": "اوافق ",
+    "date": "التاريخ  ",
+    "clik": "اضغط ",
+    "alertt": "تنبيه!! "
 }
