--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,14 +1,15 @@
 {
-    "quran":"Quran",
-    "Sala":"Sala",
-    "Qbla":"Qbla",
-    "Sebha":"Sebha",
-    "splach":"ISLAMY",
-    "lastRead":"last read",
-    "SURAHNO":"SURAH NO",
-     "alert":"pleas check your internet connection and try again ",
-     "alertCeck":"ok ",
-     "Date":"Date ",
-     "CLICK":"CLICK ",
-
-    }
+    "helloWorld": "last read",
+    "quran": "quran",
+    "sala": "Sala",
+    "qbla": "Qbla",
+    "sebha": "Sebha",
+    "splach": "ISLAMY",
+    "lastRead": "last read",
+    "surahno": "SURAH NO",
+    "alert": "pleas check your internet connection and try again ",
+    "alertceck": "ok ",
+    "date": "Date ",
+    "clik": "CLICK ",
+    "alertt": "ALERT!! "
+}
