--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -1,15 +1,15 @@
 {
-    "helloWorld": "اخر قراءه",
-    "quran": "القران الكريم",
-    "sala": "مواعيد الصلاه ",
-    "qbla": "القبله",
-    "sebha": "السبحه",
+    "helloWorld": "اخر قراءة",
+    "quran": "القرآن الكريم",
+    "sala": "مواعيد الصلاة ",
+    "qbla": "القبلة",
+    "sebha": "السبحة",
     "splach": "اسلامي",
-    "lastRead": "اخر قراءه",
-    "surahno": "رقم الصوره ",
-    "alert": "برجاء التاكد من اتصالك بالانترنت و المحاوله مره اخري ",
+    "lastRead": "اخر قراءة",
+    "surahno": "رقم الٍسورة ",
+    "alert": "برجاء التاكد من اتصالك بالانترنت و المحاولة مرة اخري ",
     "alertceck": "اوافق ",
     "date": "التاريخ  ",
     "clik": "اضغط ",
-    "alertt": "تنبيه!! "
+    "alertt": "تنبية!! "
 }
